--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <header>
     <img class="header__logo" src="images/logo.png" alt="Fisheye Home page">
-    <nav>
+    <nav aria-label="photographer categories">
         <span class="header__filter">#Portrait</span>
         <span class="header__filter">#Art</span>
         <span class="header__filter">#Fashion</span>
@@ -21,6 +21,17 @@
 </header>
 <main>
     <h1> Nos photographes</h1>
+    <section class="photographer">
+    <article id="card" class="card">
+            <img class="card__image" src="images/Sample Photos/Mimi/Portrait_Nora.jpg" alt="picture mimi keel">
+            <h3 class="card__name">Mimi Keel</h3>
+            <p class="card__location">London, UK</p>
+            <p class="card__tagline">Voir le beau dans le quotidien</p>
+            <p class="card__price">400€/jour</p>
+            <p class="card__taglist">
+            </p>
+    </article>
+    </section>
 </main>
     <script src="script/script.js"></script>
 
