--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <header>
     <img class="header__logo" src="images/logo.png" alt="Fisheye Home page">
     <nav aria-label="photographer categories">
-        <span class="header__filter">#Portrait</span>
-        <span class="header__filter">#Art</span>
-        <span class="header__filter">#Fashion</span>
-        <span class="header__filter">#Architecture</span>
-        <span class="header__filter">#Travel</span>
-        <span class="header__filter">#Sport</span>
-        <span class="header__filter">#Animals</span>
-        <span class="header__filter">#Events</span>
+        <span class="header__filter tag">#Portrait</span>
+        <span class="header__filter tag">#Art</span>
+        <span class="header__filter tag">#Fashion</span>
+        <span class="header__filter tag">#Architecture</span>
+        <span class="header__filter tag">#Travel</span>
+        <span class="header__filter tag">#Sport</span>
+        <span class="header__filter tag">#Animals</span>
+        <span class="header__filter tag">#Events</span>
     </nav>
 </header>
 <main>
     <h1> Nos photographes</h1>
-    <section class="photographer">
+    <section class="photographer" id="card__hidden">
     <article id="card" class="card">
             <img class="card__image" src="images/Sample Photos/Mimi/Portrait_Nora.jpg" alt="picture mimi keel">
             <h3 class="card__name">Mimi Keel</h3>
@@ -29,6 +29,10 @@
             <p class="card__tagline">Voir le beau dans le quotidien</p>
             <p class="card__price">400€/jour</p>
             <p class="card__taglist">
+                <span class='tag'>#portrait</span>
+                <span class='tag'>#events</span>
+                <span class='tag'>#travel</span>
+                <span class='tag'>#animals</span>
             </p>
     </article>
     </section>
