--- a/index.html
+++ b/index.html
@@ -28,15 +28,12 @@
             <p class="card__location">London, UK</p>
             <p class="card__tagline">Voir le beau dans le quotidien</p>
             <p class="card__price">400€/jour</p>
-            <p class="card__taglist">
-                <span class='tag'>#portrait</span>
-                <span class='tag'>#events</span>
-                <span class='tag'>#travel</span>
-                <span class='tag'>#animals</span>
-            </p>
+            <ul class="card__taglist">
+                <li class='tag'>#portrait</li>
+            </ul>
     </article>
     </section>
 </main>
-    <script src="script/script.js"></script>
+    <script src="script.js"></script>
 
 </body>
