Changes on createCard function

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="stylesheets/style_index.css">
 </head>
-<body>
+<body onload="index();">
 <header>
     <img class="header__logo" src="images/logo.png" alt="Fisheye Home page">
     <nav aria-label="photographer categories">
@@ -19,7 +19,7 @@
         <span class="header__filter tag">#Events</span>
     </nav>
 </header>
-<main>
+<main id="main">
     <h1> Nos photographes</h1>
     <section class="photographer" id="card__hidden">
     <article id="card" class="card">
