--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </header>
 <main id="main">
     <h1> Nos photographes</h1>
-    <section class="photographer" id="card__hidden">
-    <article id="card" class="card">
+    <section class="photographer" id="photographer">
+    <article id="card" class="card__hiden" style="display: none;">
             <img class="card__image" src="images/Sample Photos/Mimi/Portrait_Nora.jpg" alt="picture mimi keel">
             <h3 class="card__name">Mimi Keel</h3>
             <p class="card__location">London, UK</p>
