--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <header>
     <img class="header__logo" src="images/logo.png" alt="Fisheye Home page">
     <nav aria-label="photographer categories">
-        <span class="header__filter tag">#Portrait</span>
-        <span class="header__filter tag">#Art</span>
-        <span class="header__filter tag">#Fashion</span>
-        <span class="header__filter tag">#Architecture</span>
-        <span class="header__filter tag">#Travel</span>
-        <span class="header__filter tag">#Sport</span>
-        <span class="header__filter tag">#Animals</span>
-        <span class="header__filter tag">#Events</span>
+        <span class="header__filter tag" data-filter="#portrait">#Portrait</span>
+        <span class="header__filter tag" data-filter="#art">#Art</span>
+        <span class="header__filter tag" data-filter="#fashion">#Fashion</span>
+        <span class="header__filter tag" data-filter="#architecture">#Architecture</span>
+        <span class="header__filter tag" data-filter="#travel">#Travel</span>
+        <span class="header__filter tag" data-filter="#sport">#Sport</span>
+        <span class="header__filter tag" data-filter="#animals">#Animals</span>
+        <span class="header__filter tag" data-filter="#events">#Events</span>
     </nav>
 </header>
 <main id="main">
