--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <header>
     <img class="header__logo" src="images/logo.png" alt="Fisheye Home page">
     <nav aria-label="photographer categories">
+        <ul id="header__filter">
         <span class="header__filter tag" data-filter="#portrait">#Portrait</span>
         <span class="header__filter tag" data-filter="#art">#Art</span>
         <span class="header__filter tag" data-filter="#fashion">#Fashion</span>
@@ -17,6 +18,7 @@
         <span class="header__filter tag" data-filter="#sport">#Sport</span>
         <span class="header__filter tag" data-filter="#animals">#Animals</span>
         <span class="header__filter tag" data-filter="#events">#Events</span>
+        </ul>
     </nav>
 </header>
 <main id="main">
