--- a/pages/00.html
+++ b/pages/00.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
-	<title>Fisheye</title>
+	<title>Fisheye - Photographe 00</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="stylesheets/style_pages.css">
 </head>
 <body>
     <header>
-        <img class="header__logo" src="../images/logo.png" alt="Fisheye Home page">
+        <a href="../index.html"><img class="header__logo" src="../images/logo.png" alt="Fisheye Home page"></a>
     </header>
     <main>
         <section class="photograph__header">
@@ -24,6 +24,16 @@
                 <li class='tag'>#animals</li>
             </ul>
             </div>
+        </section>
+        <section class='filter'>
+            <p>Trier par
+            <div class="list-item-dropdown"><p class="dropdown-trigger">Popularité</p>
+                <ul class="dropdown-list">
+                    <li class="dropdown-list-item">Date</li>
+                    <li class="dropdown-list-item">Titre</li>
+                </ul>
+            </div>
+            </p>
         </section>
         <section class="galery">
             <article class="galery__card--picture">
