--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="stylesheets/style_index.css">
 </head>
-<body onload="index();">
+<body>
 <header>
     <img class="header__logo" src="images/logo.png" alt="Fisheye Home page">
     <nav aria-label="photographer categories">
         <ul id="header__filter">
-        <span class="header__filter tag" data-filter="#portrait">#Portrait</span>
-        <span class="header__filter tag" data-filter="#art">#Art</span>
-        <span class="header__filter tag" data-filter="#fashion">#Fashion</span>
-        <span class="header__filter tag" data-filter="#architecture">#Architecture</span>
-        <span class="header__filter tag" data-filter="#travel">#Travel</span>
-        <span class="header__filter tag" data-filter="#sport">#Sport</span>
-        <span class="header__filter tag" data-filter="#animals">#Animals</span>
-        <span class="header__filter tag" data-filter="#events">#Events</span>
+        <span class="header__filter tag portrait" onclick="filter()">#Portrait</span>
+        <span class="header__filter tag art" onclick="filter()">#Art</span>
+        <span class="header__filter tag fashion" onclick="filter()">#Fashion</span>
+        <span class="header__filter tag architecture" onclick="filter()">#Architecture</span>
+        <span class="header__filter tag travel" onclick="filter()">#Travel</span>
+        <span class="header__filter tag sport" onclick="filter()">#Sport</span>
+        <span class="header__filter tag animals" onclick="filter()">#Animals</span>
+        <span class="header__filter tag events" onclick="filter()">#Events</span>
         </ul>
     </nav>
 </header>
