--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <header>
     <img class="header__logo" src="images/logo.png" alt="Fisheye Home page">
     <nav aria-label="photographer categories">
-        <ul id="header__filter">
+        <ul id="header__filters">
     
         </ul>
     </nav>
