--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -12,20 +12,8 @@
         <a href="../index.html"><img class="header__logo" src="../images/logo.png" alt="Fisheye Home page"></a>
     </header>
     <main>
-        <section class="photograph__header">
-            <div class="flex__img"><img class="card__image" src="../images/243/Portrait_Nora.jpg" alt="picture mimi keel"></div>
-            <div class="flex__contact"><button class="contact__btn">Contactez moi</button></div>
-            <div class="flex__details"><h3 class="card__name">Mimi Keel</h3>
-            <p class="card__location">London, UK</p>
-            <p class="card__tagline">Voir le beau dans le quotidien</p>
-            <p class="card__price">400€/jour</p>
-            <ul class="card__taglist">
-                <li class='tag'>#portrait</li>
-                <li class='tag'>#events</li>
-                <li class='tag'>#travel</li>
-                <li class='tag'>#animals</li>
-            </ul>
-            </div>
+        <section class="photograph__header" id="photograph__header">
+ 
         </section>
         <section class='filter__section'>
             <div>Trier par</div>
