start populate galery

--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -30,9 +30,74 @@
                 <img class="galery__card--image" src="../images/243/Animals_Rainbow.jpg" alt="Arc-en-cie">
                 <div class="galery__card--details">
                 <div><h4 class="galery__card--title galery__card--text">Arc-en-Cie</h4></div>
-                <div class="galery__card--details2"><p class='galery__card--price galery__card--text'>70€ <div class="number__likes galery__card--text" id="number__likes">59</div><i class="fas fa-heart galery__card--text" id="like__btn"></i></p></div>
+                <div class="galery__card--details2"><p class='galery__card--price galery__card--text'>70€ <div class="number__likes galery__card--text" class="number__likes">59</div><i class="fas fa-heart galery__card--text like__btn"></i></p></div>
                 </div>
             </article>
+            <article class="galery__card">
+              <video class="galery__card--video">
+                <source src="../images/243/Animals_Wild_Horses_in_the_mountains.mp4" type="video/mp4">
+              </video> 
+              <div class="galery__card--details">
+              <div><h4 class="galery__card--title galery__card--text">Chevaux</h4></div>
+              <div class="galery__card--details2"><p class='galery__card--price galery__card--text'>70€ <div class="number__likes galery__card--text" class="number__likes">142</div><i class="fas fa-heart galery__card--text like__btn"></i></p></div>
+              </div>
+          </article>
+          <article class="galery__card">
+            <img class="galery__card--image" src="../images/243/Event_BenevidesWedding.jpg" alt="Arc-en-cie">
+            <div class="galery__card--details">
+            <div><h4 class="galery__card--title galery__card--text">Arc-en-Cie</h4></div>
+            <div class="galery__card--details2"><p class='galery__card--price galery__card--text'>70€ <div class="number__likes galery__card--text" class="number__likes">59</div><i class="fas fa-heart galery__card--text like__btn"></i></p></div>
+            </div>
+        </article>
+        <article class="galery__card">
+          <img class="galery__card--image" src="../images/243/Event_PintoWedding.jpg" alt="Arc-en-cie">
+          <div class="galery__card--details">
+          <div><h4 class="galery__card--title galery__card--text">Arc-en-Cie</h4></div>
+          <div class="galery__card--details2"><p class='galery__card--price galery__card--text'>70€ <div class="number__likes galery__card--text" class="number__likes">59</div><i class="fas fa-heart galery__card--text like__btn"></i></p></div>
+          </div>
+      </article>
+      <article class="galery__card">
+        <img class="galery__card--image" src="../images/243/Event_SeasideWedding.jpg" alt="Arc-en-cie">
+        <div class="galery__card--details">
+        <div><h4 class="galery__card--title galery__card--text">Arc-en-Cie</h4></div>
+        <div class="galery__card--details2"><p class='galery__card--price galery__card--text'>70€ <div class="number__likes galery__card--text" class="number__likes">59</div><i class="fas fa-heart galery__card--text like__btn"></i></p></div>
+        </div>
+    </article>
+    <article class="galery__card">
+      <img class="galery__card--image" src="../images/243/Portrait_Background.jpg" alt="Arc-en-cie">
+      <div class="galery__card--details">
+      <div><h4 class="galery__card--title galery__card--text">Arc-en-Cie</h4></div>
+      <div class="galery__card--details2"><p class='galery__card--price galery__card--text'>70€ <div class="number__likes galery__card--text" class="number__likes">59</div><i class="fas fa-heart galery__card--text like__btn"></i></p></div>
+      </div>
+  </article>
+  <article class="galery__card">
+    <img class="galery__card--image" src="../images/243/Portrait_Nora.jpg" alt="Arc-en-cie">
+    <div class="galery__card--details">
+    <div><h4 class="galery__card--title galery__card--text">Arc-en-Cie</h4></div>
+    <div class="galery__card--details2"><p class='galery__card--price galery__card--text'>70€ <div class="number__likes galery__card--text" class="number__likes">59</div><i class="fas fa-heart galery__card--text like__btn"></i></p></div>
+    </div>
+</article>
+<article class="galery__card">
+  <img class="galery__card--image" src="../images/243/Portrait_Wednesday.jpg" alt="Arc-en-cie">
+  <div class="galery__card--details">
+  <div><h4 class="galery__card--title galery__card--text">Arc-en-Cie</h4></div>
+  <div class="galery__card--details2"><p class='galery__card--price galery__card--text'>70€ <div class="number__likes galery__card--text" class="number__likes">59</div><i class="fas fa-heart galery__card--text like__btn"></i></p></div>
+  </div>
+</article>
+<article class="galery__card">
+  <img class="galery__card--image" src="../images/243/Travel_HillsideColor.jpg" alt="Arc-en-cie">
+  <div class="galery__card--details">
+  <div><h4 class="galery__card--title galery__card--text">Arc-en-Cie</h4></div>
+  <div class="galery__card--details2"><p class='galery__card--price galery__card--text'>70€ <div class="number__likes galery__card--text" class="number__likes">59</div><i class="fas fa-heart galery__card--text like__btn"></i></p></div>
+  </div>
+</article>
+<article class="galery__card">
+  <img class="galery__card--image" src="../images/243/Travel_Lonesome.jpg" alt="Arc-en-cie">
+  <div class="galery__card--details">
+  <div><h4 class="galery__card--title galery__card--text">Arc-en-Cie</h4></div>
+  <div class="galery__card--details2"><p class='galery__card--price galery__card--text'>70€ <div class="number__likes galery__card--text" class="number__likes">59</div><i class="fas fa-heart galery__card--text like__btn"></i></p></div>
+  </div>
+</article>
         </section>
 
         <div class="bground">
@@ -42,18 +107,12 @@
               <div class="modal-body">
                 <form
                   name="contact"
-                  action="#"
-                  method="get"
+                  action=""
+                  method="POST"
                   onsubmit="return validate();"
                 >
                   <div
                     class="formData">
-                    <input
-                    id = "id"
-                    name = "id"
-                    value = "777"
-                    type = "hidden"
-                    />
                     <label for="first">Prénom</label><br>
                     <input
                       class="text-control"
