--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-    <img class="header__logo" src="images/logo.png" alt="Fisheye Home page">
+    <a href="index.html"><img class="header__logo" src="images/logo.png" alt="Fisheye Home page"></a>
     <nav aria-label="photographer categories">
         <ul id="header__filters">
     
