--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -18,10 +18,10 @@
         <section class='filter__section'>
             <div>Trier par</div>
         <div class="dropdown">
-            <a href="#" class="dropbtn dropOne">Popularité</a><button onclick="filter()" class="dropbtn triger"><p class="triger__content">></p></button>
+            <a href="" class="dropbtn dropOne">Popularité</a><button onclick="filter()" class="dropbtn triger"><p class="triger__content">></p></button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="#">Date</a>
-              <a href="#">Prix</a>
+              <a href="">Date</a>
+              <a href="">Prix</a>
             </div>
           </div>
         </section>
