--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -31,7 +31,7 @@
 
         <div class="bground">
             <div class="content" id="formular">
-                <h3 class="modal__title">Contactez-moi</br> Mimi Keel!</h3>
+                <h3 id="modal__title"></h3>
               <span class="close" id="close"></span>
               <div class="modal-body">
                 <form
