--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -20,8 +20,8 @@
         <div class="dropdown">
             <a href="" class="dropbtn dropOne">Popularité</a><button onclick="filter()" class="dropbtn triger"><p class="triger__content">></p></button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="">Date</a>
-              <a href="">Prix</a>
+              <a href=""><p class="droptext">Date</p></a>
+              <a href=""><p class="droptext">Prix</p></a>
             </div>
           </div>
         </section>
