--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -18,16 +18,46 @@
         <section class='filter__section'>
             <div>Trier par</div>
         <div class="dropdown">
-            <a href="" class="dropbtn dropOne">Popularité</a><button onclick="filter()" class="dropbtn triger"><p class="triger__content">></p></button>
+            <a class="dropbtn dropOne" href="javascript:void(0);" onclick="sortByPopularity()">Popularité</a><button onclick="filter()" class="dropbtn triger"><p class="triger__content">></p></button>
             <div id="myDropdown" class="dropdown-content">
-              <a href=""><p class="droptext">Date</p></a>
-              <a href=""><p class="droptext">Prix</p></a>
+              <a href="javascript:void(0);"><p class="droptext" onclick="sortByDate()">Date</p></a>
+              <a href="javascript:void(0);"><p class="droptext" onclick="sortByPrice()">Prix</p></a>
             </div>
           </div>
         </section>
         <section id="galery">
            
         </section>
+
+        <!--<section id="slides" aria-roledescription="Slideshow" aria-label="Carousel images">
+	
+          <div class="slides-control">
+            <button class="slides-playpause" aria-controls="slides-items" aria-label="Stop Carousel">
+              <svg class="playpause" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32" role="img">
+                <g class="pause">
+                  <path d="m7.43 31c2.36 0 4.29-1.93 4.29-4.29v-21.4c0-2.36-1.93-4.29-4.29-4.29-2.36 0-4.29 1.93-4.29 4.29v21.4c0 2.36 1.93 4.29 4.29 4.29zm12.9-25.7v21.4c0 2.36 1.93 4.29 4.29 4.29s4.29-1.93 4.29-4.29v-21.4c0-2.36-1.93-4.29-4.29-4.29s-4.29 1.93-4.29 4.29z"></path>
+                </g>
+                <g class="play">
+                  <path d="m6.29 0.988c1.75-0.00742 13.3 8.37 20 12.4 2.61 1.35 2.72 3.64 0.145 5.18-6.19 3.67-18.7 12.4-20.3 12.4-1.59 0.0055-2.31-1.16-2.36-2.73 0.0104-8.27-0.0208-16.5 0.0156-24.8-0.0349-1.19 0.787-2.46 2.53-2.47z"></path>
+                </g>
+              </svg>		
+            </button>
+            <button class="slides-prev" aria-controls="slides-items" aria-label="Previous Slide">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32" role="img">
+                <path d="m22.1 31c2.03-0.108 3.01-2.54 1.62-4.03l-10.4-10.8 10.4-11c2.34-2.26-1.13-5.73-3.39-3.39l-12 12.6c-0.903 0.904-0.937 2.36-0.0775 3.3l12 12.5c0.483 0.548 1.19 0.846 1.92 0.808z"></path>
+              </svg>
+             </button>
+            <button class="slides-next" aria-controls="slides-items" aria-label="Next Slide">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32" role="img">
+                <path d="m9.9 31c-2.03-0.108-3.01-2.54-1.62-4.03l10.4-10.8-10.4-11c-2.34-2.26 1.13-5.73 3.39-3.39l12 12.6c0.903 0.904 0.937 2.36 0.0775 3.3l-12 12.5c-0.483 0.548-1.19 0.846-1.92 0.808z"></path>
+              </svg>
+            </button>
+          </div>
+            
+          <div id="slides-items">
+
+          </div>
+        </section>-->
 
         <div class="bground">
             <div class="content" id="formular">
