--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
-	<title>Fisheye</title>
+    <title>Fisheye</title>
+    <html lang="fr">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="stylesheets/style_index.css">
@@ -16,9 +17,9 @@
 </header>
 <main id="main">
     <h1> Nos photographes</h1>
-    <section class="photographer" id="photographer">
+    <div class="photographer" id="photographer">
 
-    </section>
+    </div>
 </main>
     <script src="script.js"></script>
 
