--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <head>
     <title>Fisheye</title>
-    <html lang="fr">
+    <html lang="fr" dir="ltr">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="stylesheets/style_index.css">
 </head>
 <body>
 <header>
-    <a href="index.html"><img class="header__logo" src="images/logo.png" alt="Fisheye Home page"></a>
+    <a href="index.html"><img class="header__logo" src="images/logo.png" alt="Fisheye Home page" longdesc="Fisheye Home page"></a>
     <nav aria-label="photographer categories">
         <ul id="header__filters">
     
