aria-label page photograph

--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="../index.html"><img class="header__logo" src="../images/logo.png" alt="Fisheye Home page"></a>
+        <a href="../index.html"><img class="header__logo" src="../images/logo.png" alt="Fisheye Home page" aria-label="retour page d'accueil"></a>
     </header>
     <main>
         <div class="photograph__header" id="photograph__header">
@@ -18,10 +18,10 @@
         <div class='filter__section'>
             <div>Trier par</div>
         <div class="dropdown">
-            <a class="dropbtn dropOne" href="javascript:void(0);" onclick="sortByPopularity()">Popularité</a><button onclick="filter()" class="dropbtn triger"><span class="triger__content" onclick="filter()">></span></button>
+            <a class="dropbtn dropOne" href="javascript:void(0);" onclick="sortByPopularity()" aria-label="tri des médias par popularité">Popularité</a><button onclick="filter()" class="dropbtn triger"><span class="triger__content" onclick="filter()" aria-label="afficher la liste des tris">></span></button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="javascript:void(0);"><p class="droptext" onclick="sortByDate()">Date</p></a>
-              <a href="javascript:void(0);"><p class="droptext" onclick="sortByPrice()">Prix</p></a>
+              <a href="javascript:void(0);" aria-label="tri des médias par date"><p class="droptext" onclick="sortByDate()">Date</p></a>
+              <a href="javascript:void(0);"><p class="droptext" onclick="sortByPrice()" aria-label="tri des médias par prix">Prix</p></a>
             </div>
           </div>
         </div>
