--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <a href="index.html"><img class="header__logo" src="images/logo.png" alt="Fisheye Home page" longdesc="Fisheye Home page"></a>
+    <a href="index.html"><img class="header__logo" src="images/logo.png" alt="Fisheye Home page" longdesc="Fisheye Home page" aria-label="retour page d'accueil"></a>
     <nav aria-label="photographer categories">
         <ul id="header__filters">
     
