number of likes

--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -104,6 +104,6 @@
               </div>
               </div>
     </main>
-    <script src="script_pages.js"></script>
+    <script src="script_pages.js" async></script>
     <script src="lightbox.js" defer></script>
 </body>
