--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stylesheets/style_pages.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/lightbox.css">
+    <script src="lightbox.js" ></script>
+
 </head>
 <body>
     <header>
@@ -104,6 +106,6 @@
               </div>
               </div>
     </main>
-    <script src="script_pages.js" async></script>
-    <script src="lightbox.js" defer></script>
+    <script src="script_pages.js" ></script>
+
 </body>
