--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -32,6 +32,7 @@
         <div id="Lightbox" class="modal">
           <span class="close pointer" onclick="closeLightbox()">&times;</span>
           <div class="modal-content">
+            <div class="slider-content"></div>
             <a class="previous" onclick="changeSlide(-1)">&#10094;</a>
             <a class="next" onclick="changeSlide(1)">&#10095;</a>
           </div>
