--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -38,6 +38,10 @@
           </div>
         </div>
 
+        <div class="bottom__page">
+
+      </div>
+
 
         <div class="bground">
             <div class="content" id="formular">
