--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -109,7 +109,6 @@
               <div class="form__sent" id="form__sent">
                 <div class="content">
                   <a href="#"><span class="close2" id="close2"></span></a>
-                <div class="iconValidMsg"><i class="far fa-check-circle"></i></div>
                 <p id="validationMsg">Merci, nous avons bien reçu votre demande.<br>Mimi va vous répondre dans les plus brefs délais.</p>
               </div>
               </div>
@@ -117,4 +116,5 @@
     </main>
     <script src="script_pages.js" ></script>
     <script src="lightbox.js" ></script>
+    <script src="modal.js" ></script>
 </body>
