correct dropdown list

--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -20,8 +20,8 @@
         <div class="dropdown">
             <a class="dropbtn dropOne" href="javascript:void(0);" onclick="sortByPopularity()" aria-label="tri des médias par popularité">Popularité</a><button onclick="filter()" class="dropbtn triger"><span class="triger__content" onclick="filter()" aria-label="afficher la liste des tris">></span></button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="javascript:void(0);" aria-label="tri des médias par date"><p class="droptext" onclick="sortByDate()">Date</p></a>
-              <a href="javascript:void(0);"><p class="droptext" onclick="sortByPrice()" aria-label="tri des médias par prix">Prix</p></a>
+              <a href="javascript:void(0);" aria-label="tri des médias par date" onclick="sortByDate()"><p class="droptext" >Date</p></a>
+              <a href="javascript:void(0);" aria-label="tri des médias par prix" onclick="sortByPrice()"><p class="droptext">Prix</p></a>
             </div>
           </div>
         </div>
