--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </nav>
 </header>
 <main id="main">
+    <a href='#main' class="scroll" aria-label="aller au contenu"><p>Passer au contenu</p></a>
     <h1> Nos photographes</h1>
     <div class="photographer" id="photographer">
 
     </div>
 </main>
     <script src="script.js"></script>
-
 </body>
