--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -34,8 +34,8 @@
           <span class="close__lightbox pointer" onclick="closeLightbox()">&times;</span>
           <div class="modal-content">
             <div class="slider-content"></div>
-            <a class="previous" onclick="changeSlide(-1)">&#10094;</a>
-            <a class="next" onclick="changeSlide(1)">&#10095;</a>
+            <a class="previous" onclick="goPrevious()">&#10094;</a>
+            <a class="next" onclick="goNext()">&#10095;</a>
           </div>
         </div>
 
