--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="js/database.class.js"></script>
     <script src="js/photographer.class.js"></script>
     <script src="js/photographerlist.class.js"></script>
+    <script src="js/tag.class.js"></script>
+    <script src="js/taglist.class.js"></script>
 </head>
 
 <body>
