--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -6,6 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stylesheets/style_pages.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/lightbox.css">
+    <script src="../js/database.class.js"></script>
+    <script src="../js/photographer.class.js"></script>
+    <script src="../js/photographsheader.class.js"></script>
 </head>
 <body>
     <header>
@@ -115,7 +118,7 @@
               </div>
               </div>
     </main>
-    <script src="script_pages.js" ></script>
+    <script src="../js/script_pages.js" ></script>
     <script src="lightbox.js" ></script>
     <script src="modal.js" ></script>
 </body>
