--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <script src="js/database.class.js"></script>
     <script src="js/photographer.class.js"></script>
+    <script src="js/image.class.js"></script>
     <script src="js/photographerlist.class.js"></script>
     <script src="js/tag.class.js"></script>
     <script src="js/taglist.class.js"></script>
