--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/lightbox.css">
     <script src="../js/database.class.js"></script>
     <script src="../js/photographer.class.js"></script>
-    <script src="../js/photographsheader.class.js"></script>
+    <script src="../js/photographheader.class.js"></script>
 </head>
 <body>
     <header>
