--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -9,6 +9,10 @@
     <script src="../js/database.class.js"></script>
     <script src="../js/photographer.class.js"></script>
     <script src="../js/photographheader.class.js"></script>
+    <script src="../js/mediafactory.class.js"></script>
+    <script src="../js/image.class.js"></script>
+    <script src="../js/video.class.js"></script>
+    <script src="../js/dropdown.list.js"></script>
 </head>
 <body>
     <header>
@@ -29,7 +33,7 @@
             </div>
           </div>
         </div>
-        <div id="galery" >
+        <div id="gallery" >
            
         </div>
 
@@ -120,5 +124,5 @@
     </main>
     <script src="../js/script_pages.js" ></script>
     <script src="lightbox.js" ></script>
-    <script src="modal.js" ></script>
+    <script src="../js/modal.js" ></script>
 </body>
