--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -10,9 +10,11 @@
     <script src="../js/photographer.class.js"></script>
     <script src="../js/photographheader.class.js"></script>
     <script src="../js/mediafactory.class.js"></script>
+    <script src="../js/galery.class.js"></script>
     <script src="../js/image.class.js"></script>
     <script src="../js/video.class.js"></script>
     <script src="../js/dropdown.list.js"></script>
+    <script src="../js/script_pages.js" ></script>
 </head>
 <body>
     <header>
@@ -26,14 +28,14 @@
         <div class='filter__section'>
             <div>Trier par</div>
         <div class="dropdown">
-            <a class="dropbtn dropOne" href="javascript:void(0);" id="sortByPopularity" aria-label="tri des médias par popularité" for='popularité'><label id='popularité'>Popularité</label></a><button onclick="filter()" class="dropbtn triger" role='button' aria-haspopup="lisbox" aria-expanded=""><span class="triger__content" onclick="filter()" aria-label="afficher la liste des tris">></span></button>
+            <a class="dropbtn dropOne" href="javascript:void(0);" id="sortByPopularity" aria-label="tri des médias par popularité" for='popularité' onclick="galery.sortByPopularity()"><label id='popularité'>Popularité</label></a><button onclick="filter()" class="dropbtn triger" role='button' aria-haspopup="lisbox" aria-expanded=""><span class="triger__content" onclick="filter()" aria-label="afficher la liste des tris">></span></button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="javascript:void(0);" aria-label="tri des médias par date" role="listbox" id="sortByDate" for='date'><label class="droptext" id="date">Date</label></a>
-              <a href="javascript:void(0);" aria-label="tri des médias par prix" id="sortByPrice" for='prix'><label class="droptext" id="prix">Prix</label></a>
+              <a href="javascript:void(0);" aria-label="tri des médias par date" role="listbox" id="sortByDate" for='date' onclick="galery.sortByDate()"><label class="droptext" id="date">Date</label></a>
+              <a href="javascript:void(0);" aria-label="tri des médias par prix" id="sortByPrice" for='prix' onclick="galery.sortByPrice()"><label class="droptext" id="prix">Prix</label></a>
             </div>
           </div>
         </div>
-        <div id="gallery" >
+        <div id="galery" >
            
         </div>
 
@@ -122,7 +124,7 @@
               </div>
               </div>
     </main>
-    <script src="../js/script_pages.js" ></script>
+
     <script src="lightbox.js" ></script>
     <script src="../js/modal.js" ></script>
 </body>
