--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -13,6 +13,8 @@
     <script src="../js/galery.class.js"></script>
     <script src="../js/image.class.js"></script>
     <script src="../js/video.class.js"></script>
+    <script src="../js/slider.class.js"></script>
+    <script src="../js/lightbox.js"></script>
     <script src="../js/dropdown.list.js"></script>
     <script src="../js/script_pages.js" ></script>
 </head>
@@ -40,11 +42,11 @@
         </div>
 
         <div id="Lightbox" class="modal">
-          <span class="close__lightbox pointer" onclick="closeLightbox()">&times;</span>
+          <span class="close__lightbox pointer" onclick="lightbox.closeLightbox()">&times;</span>
           <div class="modal-content">
-            <div class="slider-content"></div>
-            <a class="previous" onclick="goPrevious()">&#10094;</a>
-            <a class="next" onclick="goNext()">&#10095;</a>
+            <div class="slider-content" id="slider-content"></div>
+            <a class="previous" onclick="lightbox.plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="lightbox.plusSlides(1)">&#10095;</a>
           </div>
         </div>
 
@@ -125,6 +127,5 @@
               </div>
     </main>
 
-    <script src="lightbox.js" ></script>
     <script src="../js/modal.js" ></script>
 </body>
