--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/lightbox.css">
     <script src="../js/database.class.js"></script>
     <script src="../js/photographer.class.js"></script>
-    <script src="../js/photographheader.class.js"></script>
+    <script src="../js/photographinfos.class.js"></script>
     <script src="../js/mediafactory.class.js"></script>
     <script src="../js/galery.class.js"></script>
     <script src="../js/image.class.js"></script>
