--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -13,7 +13,6 @@
     <script src="../js/galery.class.js"></script>
     <script src="../js/image.class.js"></script>
     <script src="../js/video.class.js"></script>
-    <script src="../js/slider.class.js"></script>
     <script src="../js/lightbox.js"></script>
     <script src="../js/dropdown.list.js"></script>
     <script src="../js/modal.js"></script>
@@ -31,10 +30,10 @@
         <div class='filter__section'>
             <div>Trier par</div>
         <div class="dropdown">
-            <a class="dropbtn dropOne" href="javascript:void(0);" id="sortByPopularity" aria-label="tri des médias par popularité" for='popularité' onclick="galery.sortByPopularity()"><label id='popularité'>Popularité</label></a><button onclick="filter()" class="dropbtn triger" role='button' aria-haspopup="lisbox" aria-expanded=""><span class="triger__content" onclick="filter()" aria-label="afficher la liste des tris">></span></button>
+            <a class="dropbtn dropOne" href="javascript:void(0);" id="sortByPopularity" aria-label="tri des médias par popularité" for='popularité' onclick="galery.sortBy('popularity')"><label id='popularité'>Popularité</label></a><button onclick="filter()" class="dropbtn triger" role='button' aria-haspopup="lisbox" aria-expanded=""><span class="triger__content" onclick="filter()" aria-label="afficher la liste des tris">></span></button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="javascript:void(0);" aria-label="tri des médias par date" role="listbox" id="sortByDate" for='date' onclick="galery.sortByDate()"><label class="droptext" id="date">Date</label></a>
-              <a href="javascript:void(0);" aria-label="tri des médias par prix" id="sortByPrice" for='prix' onclick="galery.sortByPrice()"><label class="droptext" id="prix">Prix</label></a>
+              <a href="javascript:void(0);" aria-label="tri des médias par date" role="listbox" id="sortByDate" for='date' onclick="galery.sortBy('date')"><label class="droptext" id="date">Date</label></a>
+              <a href="javascript:void(0);" aria-label="tri des médias par prix" id="sortByPrice" for='prix' onclick="galery.sortBy('price')"><label class="droptext" id="prix">Prix</label></a>
             </div>
           </div>
         </div>
