--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="fr">
 <head>
     <title>Fisheye</title>
 
@@ -16,8 +17,8 @@
 
 <body>
     <header>
-        <a href="index.html">
-            <img class="header__logo" src="images/logo.png" alt="Fisheye Home page" longdesc="Fisheye Home page" aria-label="retour page d'accueil">
+        <a href="index.html" aria-label="retour page d'accueil">
+            <img class="header__logo" src="images/logo.png" alt="Fisheye Home page">
         </a>
 
         <nav aria-label="photographer categories">
