--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -33,7 +33,7 @@
             <a class="dropbtn dropOne" href="javascript:void(0);" id="sortByPopularity" aria-label="tri des médias par popularité" for='popularité' onclick="galery.sortBy('popularity')"><label id='popularité'>Popularité</label></a><button onclick="filter()" class="dropbtn triger" role='button' aria-haspopup="lisbox" aria-expanded=""><span class="triger__content" onclick="filter()" aria-label="afficher la liste des tris">></span></button>
             <div id="myDropdown" class="dropdown-content">
               <a href="javascript:void(0);" aria-label="tri des médias par date" role="listbox" id="sortByDate" for='date' onclick="galery.sortBy('date')"><label class="droptext" id="date">Date</label></a>
-              <a href="javascript:void(0);" aria-label="tri des médias par prix" id="sortByPrice" for='prix' onclick="galery.sortBy('price')"><label class="droptext" id="prix">Prix</label></a>
+              <a href="javascript:void(0);" aria-label="tri des médias par titre" id="sortByTitle" for='prix' onclick="galery.sortBy('title')"><label class="droptext" id="prix">Titre</label></a>
             </div>
           </div>
         </div>
