--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -30,10 +30,10 @@
         <div class='filter__section'>
             <div>Trier par</div>
         <div class="dropdown">
-            <a class="dropbtn dropOne" href="javascript:void(0);" id="sortByPopularity" aria-label="tri des médias par popularité" for='popularité' onclick="galery.sortBy('popularity')"><label id='popularité'>Popularité</label></a><button onclick="filter()" class="dropbtn triger" role='button' aria-haspopup="lisbox" aria-expanded=""><span class="triger__content" onclick="filter()" aria-label="afficher la liste des tris">></span></button>
+            <a class="dropbtn dropOne" href="javascript:void(0);" id="sortByPopularity" aria-label="tri des médias par popularité"  onclick="galery.sortBy('popularity')">Popularité</a><button onclick="filter()" class="dropbtn triger" aria-haspopup="listbox" aria-expanded="true"><span class="triger__content" onclick="filter()" aria-label="afficher la liste des tris">></span></button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="javascript:void(0);" aria-label="tri des médias par date" role="listbox" id="sortByDate" for='date' onclick="galery.sortBy('date')"><label class="droptext" id="date">Date</label></a>
-              <a href="javascript:void(0);" aria-label="tri des médias par titre" id="sortByTitle" for='prix' onclick="galery.sortBy('title')"><label class="droptext" id="prix">Titre</label></a>
+              <a aria-label="tri des médias par date" role="listbox" id="sortByDate" onclick="galery.sortBy('date')"><p class="droptext" id="date">Date</p></a>
+              <a aria-label="tri des médias par titre" id="sortByTitle" onclick="galery.sortBy('title')"><p class="droptext" id="prix">Titre</p></a>
             </div>
           </div>
         </div>
@@ -57,7 +57,7 @@
 
         <div id="bground">
             <div class="content" id="formular">
-                <h3 id="modal__title"></h3>
+                <div id="modal__title"></div>
               <span class="close" id="close" onclick="modal.closeModal()"></span>
               <div class="modal-body">
                 <form
