--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -57,7 +57,7 @@
 
         <div id="bground">
             <div class="content" id="formular">
-                <div id="modal__title"></div>
+                <div class="modal__title"></div>
               <span class="close" id="close" onclick="modal.closeModal()"></span>
               <div class="modal-body">
                 <form
