--- a/index.html
+++ b/index.html
@@ -31,5 +31,5 @@
 
         <div class="photographer" id="photographer"></div>
     </main>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
