correct css and clean JS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <a href="index.html" aria-label="retour page d'accueil">
+        <a href="index.html" aria-label="retour page d'accueil" class="logo__container">
             <img class="header__logo" src="images/logo.png" alt="Fisheye Home page">
         </a>
 
@@ -25,9 +25,9 @@
             <ul id="header__filters"></ul>
         </nav>
     </header>
-    <main id="main">
+    <main>
         <a href='#main' class="scroll" aria-label="aller au contenu"><p>Passer au contenu</p></a>
-        <h1> Nos photographes</h1>
+        <h1 id="main"> Nos photographes</h1>
 
         <div class="photographer" id="photographer"></div>
     </main>
