--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -113,18 +113,12 @@
                     class="btn-submit button"
                     type="submit"
                     value="Envoyer"
+                    onclick="modal.validate()"
                   />
                 </form>
               </div>
             </div>
               </div>
-
-        <div class="form__sent" id="form__sent">
-            <div class="content">
-                <a href="javascript:void(0);"  onclick="modal.closeConfirmationMessage()"><span class="close2" id="close2"></span></a>
-                <p id="validationMsg"></p>
-            </div>
-        </div>
     </main>
 </body>
 </html>
