--- a/pages/photographe.html
+++ b/pages/photographe.html
@@ -63,7 +63,7 @@
                 <form
                   name="contact"
                   method="POST"
-                  onsubmit="return modal.validate(e);"
+                  onsubmit="return modal.validate();"
                 >
                   <div
                     class="formData">
